--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .navbar {
-  height: 500px;
+  height: 374px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -11,8 +11,8 @@ div.boxliens {
   border-radius: 10px;
   box-shadow: -5px 3px 2px whitesmoke;
   margin: 0;
-  width: 460px;
-  height: 100%;
+  width: 357px;
+  height: 80%;
   display: flex;
   flex-direction: column;
   align-content: center;
@@ -52,6 +52,7 @@ div#navbarNav.collapse.navbar-collapse {
 }
 
 a {
+  color: rgb(204, 241, 131);
   font-size: 25px;
   text-decoration: none;
 }
