--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 
 div.boxliens {
-  border: solid 2px green;
+  border: solid 2px rgb(126, 223, 126);
   border-radius: 10px;
   box-shadow: -5px 3px 2px whitesmoke;
   margin: 0;
@@ -267,6 +267,7 @@ table.tableau tfoot .links a {
 
 .btn-danger {
   margin-top: 0px;
+  
 }
 
 
