--- a/style.css
+++ b/style.css
@@ -21,9 +21,9 @@ div.boxliens {
 nav {
   background:url("./images/641691-39686705\(1\).jpg") ;
   background-repeat: no-repeat, repeat;
-  background-size: 55%;
-  background-position: 50% 50% ;
-  
+  background-size: cover;
+  background-position: center; /* Center the image */
+
   
 
 }
