--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 div.boxliens {
   border: solid 2px rgb(126, 223, 126);
   border-radius: 45px;
@@ -13,23 +11,21 @@ div.boxliens {
   justify-content: center;
   background: rgb(0, 166, 255);
   align-items: center;
-  padding: 10px
-  
+  padding: 10px;
 }
 
-
 nav {
-  background:url("./images/office.jpg") ;
+  background: url("./images/artificial-intelligence-2167835.jpg");
   background-repeat: no-repeat, repeat;
-  background-size: +60%;
+  background-size: +90%;
   background-position: bottom 70% center;
   -webkit-background-position: center 590px;
 }
 
 .container {
   display: flex;
-    flex-direction: row;
-    justify-content: center;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .navbar-brand img {
@@ -39,21 +35,19 @@ nav {
 }
 
 img {
-  
   height: 95px;
   margin-top: 4px;
   position: relative;
   top: 81px;
   left: 142px;
-  border-radius: 50%
-  
+  border-radius: 50%;
 }
 
 .identite {
   display: flex;
-    width: 133px;
-    flex-direction: row;
-    justify-content: center;
+  width: 133px;
+  flex-direction: row;
+  justify-content: center;
 }
 
 div#navbarNav.collapse.navbar-collapse {
@@ -76,7 +70,6 @@ a:hover {
 img {
   height: 95px;
   position: relative;
- 
 }
 
 .navbar-nav {
@@ -96,7 +89,6 @@ li .nav-item {
   display: flex;
   align-items: center;
   border-radius: 15px;
-  
 }
 
 .collapse {
@@ -108,8 +100,7 @@ li .nav-item {
 
 input.btn.btn-primary {
   width: 195px;
-  height:55px;
-
+  height: 55px;
 }
 
 input {
@@ -163,7 +154,6 @@ input.form-control {
 #TEXTH1 {
   display: flex;
   justify-content: center;
-
 }
 
 h1 {
@@ -187,7 +177,7 @@ inputbtn.btn-primary {
   background: blue;
 }
 
-button.sauvegarder{
+button.sauvegarder {
   margin-right: 300px;
 }
 
@@ -195,10 +185,9 @@ button.sauvegarder{
   border: red;
 }
 
-button.imprimer{
+button.imprimer {
   margin-left: 300px;
 }
-
 
 table.tableau {
   font-family: "Arial Black", Gadget, sans-serif;
@@ -300,37 +289,59 @@ table.tableau tfoot .links a {
 
 .btn-danger {
   margin-top: 0px;
-  
 }
 
-
 @media only screen and (max-width: 580px) {
-  .h1, h1 {
-  font-size: 1.5rem;
+  .h1,
+  h1 {
+    font-size: 1.5rem;
   }
 
-  table.tableau td, table.tableau th {
+  table.tableau td,
+  table.tableau th {
     font-size: 10px;
-    
   }
 
   table.tableau tbody td {
     font-size: 10px;
-    
   }
 
   .btn {
     font-size: 12px;
     border-radius: 10px;
   }
- 
 
   input.btn.btn-primary {
     width: 100px;
     height: 38px;
   }
-  
-
 }
 
+@media print {
+  body {
+    width: 210mm;
+    height: 297mm;
+    margin: 20mm; /* Ajouter une marge pour éviter que le contenu ne touche les bords du papier */
+  }
+
+  /* 
+  Vous pouvez également cibler des éléments spécifiques sur votre page pour modifier leur apparence lors de l'impression. Par exemple, peut-être que vous voulez cacher un certain élément lors de l'impression. 
+  */
+
+  .element-a-cacher {
+    display: none;
+  }
+
+  /* 
+  Ou peut-être que vous voulez changer la taille de la police de certains éléments pour l'impression.
+  */
+
+  .element-augmenter-police {
+    font-size: 14pt; /* Utilisez pt pour la taille de la police lors de l'impression pour obtenir une taille constante. */
+  }
+
+  table, th, td {
+    border: 2px solid black  !important;
+}
+}
 
