--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@ img {
   justify-content: center;
 }
 
+.upload {
+  margin-right: 0.5vw;
+}
+
 div#navbarNav.collapse.navbar-collapse {
   width: 100%;
   margin-right: 0px;
@@ -90,6 +94,7 @@ li .nav-item {
   display: flex;
   align-items: center;
   border-radius: 15px;
+  margin-right: 0.13vw;
 }
 
 .collapse {
@@ -102,6 +107,9 @@ li .nav-item {
 input.btn.btn-primary {
   width: 195px;
   height: 55px;
+  box-shadow: -6px 6px 0 whitesmoke;
+  border: solid 3px black;
+  margin: 0px;
 }
 
 input {
