--- a/style.css
+++ b/style.css
@@ -302,9 +302,17 @@ table.tableau tfoot .links a {
 
 @media only screen and (max-width: 1000px) {
 
+
   body {
     margin: 0px;
     width: auto;
+  }
+
+  input.btn.btn-primary {
+    
+    box-shadow: none;
+    border: solid 3px black;
+    margin: 0px;
   }
   nav {
     margin-top: -36px;
